# ableton-mcp-server

./: .gitignore  .mcp.json  .mcp.json.template  .mcpbignore  CLAUDE.md  PLAN.md  README.md  collab-dashboard.html  create_lofi_song.py  devices_registry.json  manifest.json  mcpb_pyproject.toml  mcpb_server.py  pyproject.toml  setup-mcp.sh
.claude/skills/: ableton.md
docs/: TROUBLESHOOTING.md
examples/: black-panther-beat.json
src/ableton_mcp/: __main__.py  connection.py  server.py
src/ableton_mcp/tools/: __init__.py  browser.py  executor.py  export.py  song.py  track.py
