[project]
name = "ableton-mcp-server"
version = "0.1.0"
description = "MCP server for controlling Ableton Live via Claude"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ldraney"}
]
keywords = ["ableton", "mcp", "ai", "music", "claude", "osc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp>=2.3.4",
    "abletonosc-client>=1.1.0",
    "song-schema>=0.1.0",
    "song-executor>=0.1.0",
    "mido>=1.3.3",
]

[project.urls]
Homepage = "https://github.com/ldraney/ableton-mcp"
Repository = "https://github.com/ldraney/ableton-mcp"
Issues = "https://github.com/ldraney/ableton-mcp/issues"

[project.scripts]
ableton-mcp = "ableton_mcp.server:main"

[tool.poetry]
packages = [{include = "ableton_mcp", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
